New Ingredients, Potions and Recipes

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -409,6 +409,15 @@
   "item.lotmcraft.agate_peacock_egg": "Egg of an Agate Peacock",
   "item.lotmcraft.succubus_eyes": "Eyes of a Succubus",
   "item.lotmcraft.shadow_lizard_scales": "Scales of a Shadow Lizard",
+  "item.lotmcraft.bizarro_bane_eye": "Eye of a Bizarro Bane",
+  "item.lotmcraft.golden_blood": "Golden Blood",
+  "item.lotmcraft.sun_orb": "Sun Orb",
+  "item.lotmcraft.magma_giant_core": "Core of a Magma Giant",
+  "item.lotmcraft.golden_phoenix_eyes": "Eye of a Golden Phoenix",
+  "item.lotmcraft.mist_watcher_crystal": "Crystal left by a Mist Watcher",
+  "item.lotmcraft.whale_of_punishment_stomach": "Stomach of a Whale of Punishment",
+  "item.lotmcraft.king_of_green_wings_eye": "Eye of the King of Green Wings",
+  "item.lotmcraft.war_comet_core": "Core of a War Comet",
 
   "_comment010": "Pathways-----------------------------------------------------------------------------",
   "lotm.pathway.fool": "Fool",
