Added Ability Icon for Historical Void Summoning

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -169,6 +169,7 @@
   "ability.lotmcraft.marionette_controlling.control": "Control",
   "ability.lotmcraft.marionette_controlling.auto_swap": "Auto Swap",
   "ability.lotmcraft.marionette_controlling.get_item": "Get marionette Item",
+  "item.lotmcraft.historical_void_summoning_ability": "Historical Void Summoning",
   "item.lotmcraft.historical_void_hiding_ability": "Hiding in the Historical Void",
 
   "item.lotmcraft.midnight_poem_ability": "Midnight Poem",
