Tyrant Pathway Sequence 1

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -133,6 +133,7 @@
   "item.lotmcraft.energy_transformation_ability": "Energy Transformation",
   "item.lotmcraft.heavenly_punishment_ability": "Heavenly Punishment",
   "item.lotmcraft.electromagnetic_tornado_ability": "Electromagnetic Tornado",
+  "item.lotmcraft.roar_of_the_thunder_god_ability": "Roar of the Thunder God",
 
   "item.lotmcraft.toxic_smoke_ability": "Toxic Smoke",
   "item.lotmcraft.poisonous_flame_ability": "Poisonous Flame",
