Started Sun Seq 1

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -59,6 +59,7 @@
   "item.lotmcraft.spear_of_light_ability": "Spear of Light",
   "item.lotmcraft.solar_envoy_ability": "Solar Envoy",
   "item.lotmcraft.wings_of_light_ability": "Wings of Light",
+  "item.lotmcraft.pure_white_light_ability": "Pure White Light",
 
   "item.lotmcraft.trap_ability": "Trap",
   "item.lotmcraft.provoking_ability": "Provoking",
