--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -60,6 +60,7 @@
   "item.lotmcraft.solar_envoy_ability": "Solar Envoy",
   "item.lotmcraft.wings_of_light_ability": "Wings of Light",
   "item.lotmcraft.pure_white_light_ability": "Pure White Light",
+  "item.lotmcraft.divine_kingdom_manifestation_ability": "Divine Kingdom Manifestation",
 
   "item.lotmcraft.trap_ability": "Trap",
   "item.lotmcraft.provoking_ability": "Provoking",
