--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -258,6 +258,9 @@
   "item.lotmcraft.black_hole_ability": "Black Hole",
   "item.lotmcraft.replicating_ability": "Replicating",
   "item.lotmcraft.distortion_field_ability": "Distortion Field",
+  "item.lotmcraft.distortion_field_ability.description": "Create an area where enemies get randomly teleported around and find it hard to use their abilities",
+  "item.lotmcraft.area_miniaturization_ability": "Area Miniaturization",
+  "item.lotmcraft.excavated_area": "Excavated Area",
 
   "item.lotmcraft.spectating_ability": "Spectating",
   "item.lotmcraft.telepathy_ability": "Telepathy",
