Red Priest Pathway Abilities

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -104,6 +104,7 @@
   "ability.lotmcraft.flame_authority.destruction_spear": "Spear of Destruction",
   "ability.lotmcraft.flame_authority.inferno": "Inferno",
   "ability.lotmcraft.flame_authority.vortex": "Flaming Vortex",
+  "item.lotmcraft.puppet_soldier_creation_ability": "Puppet Soldier Creation",
 
   "item.lotmcraft.raging_blows_ability": "Raging Blows",
   "item.lotmcraft.water_manipulation_ability": "Water Manipulation",
