Demoness Pathway Abilities

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -232,6 +232,7 @@
   "ability.lotmcraft.disaster_manifestation.ice_age": "Ice Age",
   "ability.lotmcraft.disaster_manifestation.meteor": "Meteor",
   "item.lotmcraft.structural_collapse_ability": "Structural Collapse",
+  "item.lotmcraft.apocalypse_ability": "Apocalypse",
 
   "item.lotmcraft.plant_nurturing_ability": "Plant Nurturing",
   "item.lotmcraft.healing_ability": "Healing",
