Demoness Pathway Abilities

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -268,6 +268,14 @@
   "item.lotmcraft.conceptualization_ability": "Conceptualization",
   "item.lotmcraft.sealing_ability": "Sealing",
   "item.lotmcraft.space_tearing_ability": "Space Tearing",
+  "item.lotmcraft.waypoint_ability": "Waypoint",
+  "item.lotmcraft.waypoint_ability.description": "Set Waypoints that you can then teleport to. Cycle through the waypoints by sneaking.",
+  "ability.lotmcraft.waypoint.teleport": "Teleport to Waypoint",
+  "ability.lotmcraft.waypoint.set": "Create new Waypoint",
+  "ability.lotmcraft.waypoint.delete": "Delete current Waypoint",
+  "ability.lotmcraft.waypoint.created": "Created new Waypoint",
+  "ability.lotmcraft.waypoint.deleted": "Deleted Waypoint",
+  "ability.lotmcraft.waypoint.no_waypoints": "You don't have any waypoints",
   "item.lotmcraft.black_hole_ability": "Black Hole",
   "item.lotmcraft.replicating_ability": "Replicating",
   "item.lotmcraft.distortion_field_ability": "Distortion Field",
