--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -25,6 +25,8 @@
   "key.beyonders.previous_ability": "Previous Ability",
   "key.beyonders.increase_sequence": "Increase Sequence",
   "key.beyonders.decrease_sequence": "Decrease Sequence",
+  "key.beyonders.toggle_ability_hotbar": "Toggle Ability Hotbar",
+  "key.beyonders.cycle_ability_hotbar": "Cycle Ability Hotbar",
 
 
 
