Door Pathway Pocket Dimension

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -409,6 +409,7 @@
   "_comment008": "Blocks-----------------------------------------------------------------------------",
   "block.lotmcraft.brewing_cauldron": "Brewing Cauldron",
   "block.lotmcraft.void_block": "Void",
+  "block.lotmcraft.solid_void_block": "Solid Void",
 
 
   "_comment009": "Ingredients-----------------------------------------------------------------------------",
