Door Pathway Player Teleportation

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -288,6 +288,7 @@
   "item.lotmcraft.pocket_dimension_ability": "Pocket Dimension",
   "item.lotmcraft.excavated_area": "Excavated Area",
   "item.lotmcraft.space_time_storm_ability": "Space-Time Storm",
+  "item.lotmcraft.player_teleportation_ability": "Player Teleportation",
 
   "item.lotmcraft.spectating_ability": "Spectating",
   "item.lotmcraft.telepathy_ability": "Telepathy",
