Bugfix so you get changed to first person again after using toggleable abilities, Bugfix with Assassin spelling, added gamerule to regulate Beyonder Spawning

--- a/src/main/resources/assets/lotmcraft/lang/de_de.json
+++ b/src/main/resources/assets/lotmcraft/lang/de_de.json
@@ -424,7 +424,7 @@
   "lotm.sequence.demoness_of_pleasure": "Dämonin des Vergnügens",
   "lotm.sequence.witch": "Hexe",
   "lotm.sequence.instigator": "Anstifter",
-  "lotm.sequence.asassin": "Attentäter",
+  "lotm.sequence.assassin": "Attentäter",
 
   "lotm.sequence.red_priest": "Roter Priester",
   "lotm.sequence.conqueror": "Eroberer",
