--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -619,7 +619,7 @@
   "lotm.sequence.demoness_of_pleasure": "Demoness of Pleasure",
   "lotm.sequence.witch": "Witch",
   "lotm.sequence.instigator": "Instigator",
-  "lotm.sequence.asassin": "Asassin",
+  "lotm.sequence.assassin": "Assassin",
 
   "lotm.sequence.red_priest": "Red Priest",
   "lotm.sequence.conqueror": "Conqueror",
