Tyrant Mythical Creature form and other stuff>

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -33,6 +33,8 @@
 
   "_comment001": "Abilities------------------------------------------------------------------------------------",
 
+  "item.lotmcraft.mythical_creature_tyrant_ability": "Mythical Creature Form",
+
   "item.lotmcraft.cogitation_ability": "Cogitation",
   "item.lotmcraft.cogitation_ability.description": "Cogitate to replenish your Spirituality",
   "item.lotmcraft.divination_ability": "Divination",
