Door Mythical Creature form

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -34,6 +34,7 @@
   "_comment001": "Abilities------------------------------------------------------------------------------------",
 
   "item.lotmcraft.mythical_creature_tyrant_ability": "Mythical Creature Form",
+  "item.lotmcraft.mythical_creature_door_ability": "Mythical Creature Form",
 
   "item.lotmcraft.cogitation_ability": "Cogitation",
   "item.lotmcraft.cogitation_ability.description": "Cogitate to replenish your Spirituality",
