Guiding Book and new Recipe Background

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.lotmcraft.fool_card": "Fool Card",
+  "item.lotmcraft.guiding_book": "Guiding Book",
   "item.lotmcraft.lotm_icon": "LotM Icon",
   "item.lotmcraft.paper_figurine_substitute": "Paper Figurine Substitute",
   "item.lotmcraft.mirror": "Mirror",
