New Introspect Menu

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -819,6 +819,8 @@
   "lotm.not_implemented_yet": "Not Implemented Yet",
   "lotm.pathway": "Pathway",
   "lotm.sequence": "Sequence",
+  "lotm.digestion": "Digestion",
+  "lotm.passive_abilities": "Passive Abilities",
   "lotm.beyonder_characteristic": "Beyonder Characteristic",
   "lotm.potion": "Potion",
   "lotm.spirituality": "Spirituality",
