Completely reworked Physical Enhancements to use attribute system

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -841,6 +841,7 @@
 
   "lotm.griefing": "Griefing Enabled",
   "lotm.description": "Description",
+  "lotm.digested": "Digested the Potion",
   "lotm.marionette": "Marionette",
   "lotm.selected": "Selected",
   "lotm.potion_recipe": "Potion Recipe",
