Finished Sanity System

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -850,6 +850,7 @@
   "lotm.pathway": "Pathway",
   "lotm.sequence": "Sequence",
   "lotm.digestion": "Digestion",
+  "lotm.sanity": "Sanity",
   "lotm.passive_abilities": "Passive Abilities",
   "lotm.beyonder_characteristic": "Beyonder Characteristic",
   "lotm.potion": "Potion",
